GUI Improvement Facebook integration started

--- a/tmpl/Error404.tmpl
+++ b/tmpl/Error404.tmpl
@@ -48,8 +48,8 @@
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
-			<div class="main-container">
-				<div id="error_404_central_container">
+			<div class="main-container wide">
+				<div id="error_404_central_container" class="header-padding">
 					<div id="ornament"></div>
 					<div id="error_404_description_container">
 						<h1>Error 404</h1>
