--- a/tmpl/Solution.tmpl
+++ b/tmpl/Solution.tmpl
@@ -29,9 +29,9 @@
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
-			<div class="container-fluid">
-				<% include template_view::navigation_menu() %>
-				<div class="main-container">
+			<% include template_view::navigation_menu() %>
+			<div class="main-container">
+				<div class="header-padding">
 					<% include template_view::toolbar_solution(problem_id) %>
 					<div class="horizontal_line"></div>
 					<div id="solution_header_container">
