--- a/tmpl/User.tmpl
+++ b/tmpl/User.tmpl
@@ -23,144 +23,132 @@
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
-			
-			<div class="container-fluid">
-				<% include template_view::navigation_menu() %>
-				<div class="main-container">
-					<div id="column_1">
-						<div id="content_wrapper">
-							<div id="title_container">
-								<div class="row-fluid title">								
-									<div id="rank_icon"></div>
-									<div id="big_name"><%= user->first_name %> <%= user->last_name %></div>
+			<% include template_view::navigation_menu() %>
+			<!-- TO BE REVISED -->
+			<div class="main-container">
+				<div id="column_1" class="header-padding">
+					<div id="content_wrapper">
+						<div id="title_container">
+							<div class="row-fluid title">								
+								<div id="rank_icon"></div>
+								<div id="big_name"><%= user->first_name %> <%= user->last_name %></div>
+							</div>
+							<div class="row-fluid">
+								<div class="span3">
+									<div>
+										<div class="stat_number"><%= number_of_publications %></div>
+										<div class="stat_description">Publicaciones</div>
+									</div>
 								</div>
-								<div class="row-fluid">
-									<div class="span3">
-										<div>
-											<div class="stat_number"><%= number_of_publications %></div>
-											<div class="stat_description">Publicaciones</div>
-										</div>
+								<div class="span3">
+									<div>
+									<div class="stat_number"><%= number_of_problems %></div>
+									<div class="stat_description">Problemas</div>
 									</div>
-									<div class="span3">
-										<div>
-										<div class="stat_number"><%= number_of_problems %></div>
-										<div class="stat_description">Problemas</div>
-										</div>
+								</div>
+								<div class="span3">
+									<div>
+									<div class="stat_number"><%= number_of_solutions %></div>
+									<div class="stat_description">Soluciones</div>
 									</div>
-									<div class="span3">
-										<div>
-										<div class="stat_number"><%= number_of_solutions %></div>
-										<div class="stat_description">Soluciones</div>
-										</div>
+								</div>
+								<div class="span3">
+									<div>
+									<div class="stat_number"><%= number_of_accepted_solutions %></div>
+									<div class="stat_description">Soluciones aceptadas</div>
 									</div>
-									<div class="span3">
-										<div>
-										<div class="stat_number"><%= number_of_accepted_solutions %></div>
-										<div class="stat_description">Soluciones aceptadas</div>
-										</div>
-									</div>
+								</div>
 
-								</div>
-							</div>
-							<h2>Descripcion personal</h2>
-							<div id="user_customizable_panel">
-								Messi nació el 24 de junio de 1987 en la ciudad de Rosario, en la
-								provincia de Santa Fe, Argentina. Es hijo de Jorge Horacio Messi, 
-								trabajador de una fábrica, y de Celia María Cuccittini, una limpiadora 
-								de medio tiempo. Su familia, de parte de su padre, posee 
-								ascendencia italiana debido a su bisabuelo Angelo Messi, que vivía en
-								la ciudad de Ancona, y que se mudó a Argentina en 1883. Tiene dos
-								hermanos llamados Rodrigo y Matías, como también una hermana llamada
-								María Sol. Asimismo, dos de sus primos (Maximiliano y Emanuel Biancucchi)
-								son también futbolistas.<br>
-							</div>
-							<h2>Actividad reciente</h2>
-							<div id="recent_activity">
-								<% foreach activity in *recent_activity %>
-									<% item %>
-										<% if (!activity->is_anonymous || content.user_name.compare(content.user->user_name) == 0) %>
-											<div class="box_description problems_problem_description">
-												<% include template_view::publication_description(activity) %>
-											</div>
-										<% end %>
-									<% end %>
-								<% empty %>
-									No hay actividad reciente
-								<% end %>
 							</div>
 						</div>
+						<h2>Descripcion personal</h2>
+						<div id="user_customizable_panel">
+							Messi nació el 24 de junio de 1987 en la ciudad de Rosario, en la
+							provincia de Santa Fe, Argentina. Es hijo de Jorge Horacio Messi, 
+							trabajador de una fábrica, y de Celia María Cuccittini, una limpiadora 
+							de medio tiempo. Su familia, de parte de su padre, posee 
+							ascendencia italiana debido a su bisabuelo Angelo Messi, que vivía en
+							la ciudad de Ancona, y que se mudó a Argentina en 1883. Tiene dos
+							hermanos llamados Rodrigo y Matías, como también una hermana llamada
+							María Sol. Asimismo, dos de sus primos (Maximiliano y Emanuel Biancucchi)
+							son también futbolistas.<br>
+						</div>
+						<h2>Actividad reciente</h2>
+						<div id="recent_activity">
+							<% foreach activity in *recent_activity %>
+								<% item %>
+									<% if (!activity->is_anonymous || content.user_name.compare(content.user->user_name) == 0) %>
+										<div class="box_description problems_problem_description">
+											<% include template_view::publication_description(activity) %>
+										</div>
+									<% end %>
+								<% end %>
+							<% empty %>
+								No hay actividad reciente
+							<% end %>
+						</div>
 					</div>
-					<div id="column_2">
-						<div id="profile_image" style="background:url('<%= user->profile_picture_url %>')"></div>
-						<div id="user_personal_info">
-							<div class="feature_container">
-								<div class="feature_title">
-									Nombre de usuario
-								</div>
-								<div class="horizontal_line"></div>
-								<div class="feature_value">
-									<%= user->user_name %>
-								</div>
+				</div>
+				<div id="column_2">
+					<div id="profile_image" style="background:url('<%= user->profile_picture_url %>')"></div>
+					<div id="user_personal_info">
+						<div class="feature_container">
+							<div class="feature_title">
+								Nombre de usuario
 							</div>
-							<div class="feature_container">
-								<div class="feature_title">
-									Nombre
-								</div>
-								<div class="horizontal_line"></div>
-								<div class="feature_value">
-									<%= user->first_name %>
-								</div>
+							<div class="horizontal_line"></div>
+							<div class="feature_value">
+								<%= user->user_name %>
 							</div>
-							<div class="feature_container">
-								<div class="feature_title">
-									Apellido
-								</div>
-								<div class="horizontal_line"></div>
-								<div class="feature_value">
-									<%= user->last_name %>
-								</div>
+						</div>
+						<div class="feature_container">
+							<div class="feature_title">
+								Nombre
 							</div>
-							<div class="feature_container">
-								<div class="feature_title">
-									Sexo
-								</div>
-								<div class="horizontal_line"></div>
-								<div class="feature_value">
-									<%= user->genre %>
-								</div>
+							<div class="horizontal_line"></div>
+							<div class="feature_value">
+								<%= user->first_name %> <%= user->last_name %>
 							</div>
-							<div class="feature_container">
-								<div class="feature_title">
-									Fecha de nacimiento
-								</div>
-								<div class="horizontal_line"></div>
-								<div class="feature_value">
-									<%= user->birth_date->toString("%d/%m/%Y") %>
-								</div>
+						</div>
+						<div class="feature_container">
+							<div class="feature_title">
+								Sexo
 							</div>
-							<div class="feature_container">
-								<div class="feature_title">
-									E-mail
-								</div>
-								<div class="horizontal_line"></div>
-								<div class="feature_value">
-									<%= user->email %>
-								</div>
+							<div class="horizontal_line"></div>
+							<div class="feature_value">
+								<%= user->genre %>
 							</div>
-							<div class="feature_container">
-								<div class="feature_title">
-									Fecha de registro
-								</div>
-								<div class="horizontal_line"></div>
-								<div class="feature_value">
-									<%= user->sign_up_datetime->toString("%d/%m/%Y %H:%M:%S") %>
-								</div>
+						</div>
+						<div class="feature_container">
+							<div class="feature_title">
+								Fecha de nacimiento
+							</div>
+							<div class="horizontal_line"></div>
+							<div class="feature_value">
+								<%= user->birth_date->toString("%d/%m/%Y") %>
+							</div>
+						</div>
+						<div class="feature_container">
+							<div class="feature_title">
+								E-mail
+							</div>
+							<div class="horizontal_line"></div>
+							<div class="feature_value">
+								<%= user->email %>
+							</div>
+						</div>
+						<div class="feature_container">
+							<div class="feature_title">
+								Fecha de registro
+							</div>
+							<div class="horizontal_line"></div>
+							<div class="feature_value">
+								<%= user->sign_up_datetime->toString("%d/%m/%Y %H:%M:%S") %>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		
+			</div>		
 		<% end template %>
 		
 	
