--- a/www/css/template.css
+++ b/www/css/template.css
@@ -21,6 +21,11 @@ div {
 	font-family: font_global;
 }
 
+html, body{
+	height: 100%;
+	min-height:100%;
+}
+
 a,a:active,a:hover,a:visited {
 	cursor: pointer;
 	text-decoration: none;
@@ -264,7 +269,6 @@ div.horizontal_line {
 	clear: both;
 	width: 100%;
 	height: 1px;
-	margin-bottom: 16px;
 }
 
 a.link_footer {
@@ -385,7 +389,8 @@ a.link_description {
 	color: #333333;
 	display: block;
 	font-family: font_link_description;
-	font-size: 2em;
+	font-size: 25px;
+	line-height: 27px;
 	text-shadow: 0px 0px 1px #999;
 }
 
@@ -416,7 +421,7 @@ div.problems_problem_description {
 	border-width: 1px;
 	overflow: hidden;
 	padding: 16px;
-	margin-bottom: 16px;
+	margin-bottom: 10px;
 }
 
 div.problems_votes {
@@ -433,8 +438,7 @@ div.problems_votes .number {
 
 /* NEW TOTALLY UNORDERED!! */
 .main-container {
-	margin-left: 112px;
-	padding: 64px 20px 20px 20px;
+	padding: 0 20px;
 	background-color: #FFFFFF;
 	border-color: #D0D0D0;
 	border-style: solid;
@@ -442,7 +446,18 @@ div.problems_votes .number {
 	box-shadow: 2px 0px 8px rgba(51, 51, 51, 0.4), -2px 0px 8px
 		rgba(51, 51, 51, 0.4);
 	border-bottom-style: none;
-	height: 800px;
+	
+	min-height:100%;
+	margin-top: -1px;
+	margin-left: 132px;
+	margin-right:20px;
+}
+.main-container.wide{
+	margin-left:20px;
+}
+
+.header-padding {
+	padding-top: 60px;
 }
 
 .fixed-title-wrapper {
@@ -457,6 +472,7 @@ div.problems_votes .number {
 	border-width: 1px;
 	box-shadow: -2px 3px 5px -2px #888;
 	height: 120px; /* same as stats box */
+	z-index: 5;
 }
 
 .title-container {
@@ -482,14 +498,17 @@ div.problems_votes .number {
 	width: 320px;
 	border-left: 1px solid #F3F3F3;
 	background-color: #F7F7F7;
+	z-index:3;
 }
 
 .problem-content {
-	padding-top: 140px; /* fixed bar height + internal padding */
+	position:relative;
+	padding-top: 180px; /* fixed bar height + internal padding */
 	padding-right: 320px; /* stats width */
 	padding-left: 30px;
 	padding-bottom: 10px;
 	min-height: 100%;
+	overflow-x: hidden;
 }
 
 /* Votes */
@@ -579,6 +598,10 @@ div.problems_votes .number {
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+
+.button_square.after_div {
+	margin-top:16px;
+}
 /*
 ----------------------------------------------------------------------------------------------
 	Clarifications
@@ -642,7 +665,7 @@ a.header_bar_logo {
 	background-image: url('../img/logo.png');
 	background-position: left center;
 	background-repeat: no-repeat;
-	height: 48px;
+	height: 42px;
 	width: 98px;
 }
 
