Template organization (described in docs/template_organization) Deleted innecesary objects in ViewContent.h

--- a/tmpl/pages/DebugPage.tmpl
+++ b/tmpl/pages/DebugPage.tmpl
@@ -13,7 +13,7 @@
 		<% template button(String label, String url, String classes, String id) %>
 			<a href="<%= url %>">
 				<div class="<%= classes %>" id="<%= id %>">
-					<%= label %>
+					<%= user_name %>
 				</div>
 			</a>
 		<% end template %>
