--- a/tmpl/pages/IdeasPage.tmpl
+++ b/tmpl/pages/IdeasPage.tmpl
@@ -2,7 +2,7 @@
 <% c++ #include "../src/logic/ViewContent.h" %>
 
 <% skin pci_skin %>
-	<% view ideas_view uses ViewContent::IdeasContent extends template_view %>
+	<% view ideas_view uses ViewContent::TemplateContent extends template_view %>
 	
 	
 		<% template css_links() %>
