--- a/tmpl/pages/TemplatePage.tmpl
+++ b/tmpl/pages/TemplatePage.tmpl
@@ -2,156 +2,59 @@
 <% c++ #include "../src/logic/ViewContent.h" %>
 
 <% skin pci_skin %>
-	<% view template_view uses ViewContent::TemplateContent %>
-
-		<% template header_bar() %>
-			<div class="navbar navbar-inverse navbar-fixed-top">
-		    	<div class="navbar-inner">
-		        	<div class="container-fluid">
-						<a class="pull-left header_bar_logo" href="<% url "/" %>"></a>
-						<% if user_signed_in %>
-							<ul class="nav pull-left">
-				              <li id="notification-button" class="active">
-				                <a>Notificaciones</a>
-				                <div id="notification-panel">
-				                	<!-- TO BE FILLED WITH NOTIFICATIONS -->
-				                </div>
-				                <script type="text/javascript">
-				                function openNotificationDialog(){
-				                	$('#notification-panel').toggle();
-				                }
-								$('#notification-button').click(function(){
-									openNotificationDialog();
-								});
-				                </script>
-				              </li>						
-							</ul>
-						<% end %>
-						<!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-						<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</a>
-						<div class="nav-collapse collapse">
-					 		<ul class="nav pull-right">
-					 			<li>
-									<form class="navbar-search pull-right" action="">
-			                      		<input type="text" class="search-query span2" placeholder="Buscar">
-			                    	</form>
-	                    		</li>
-	                    		<li><img id="profile-picture" style="display:none;" /></li>
-							 	<% if user_signed_in %>
-							      	<li><% include toggle_anonymous_mode_form(anonymous_mode) using user_services %></li>
-									<li>
-								 		<a id="header_bar_user_name" href="<% url "/user" using user_name %>">
-								 			<%= user_first_name %> <%= user_last_name %>
-							 			</a>
-						 			</li>
-									<li><% include sign_out_form() using user_services %></li>		 		
-								<% else %>
-									<li>									
-										<button class="btn pull-right" id="header_bar_button_sign_in">
-											Ingresar
-										</button>
-										<div id="header_bar_sign_in_container">
-											<% include sign_in_form() using user_services %>
-										</div>
-									</li>
-								<% end %>
-							</ul>
-			          	</div><!--/.nav-collapse -->
-		        	</div>
-		     	</div>
-		    </div>
-		    <% if user_signed_in %>
-			    <script>
-			    	checkNotificationsPeriodically($('#notification-panel'));
-			    </script>
-			<% end %>
+	<% view template_view uses ViewContent::SessionContent %>
+		
+		
+		<% template page_title() %>
 		<% end template %>
 		
-		<% template navigation_menu() %>
-		<div class="sidebar-nav pull-left" id="navigation_menu">
-            <ul class="nav nav-list">
-              <li><a class="button_square navigation_menu_button" id="navigation_menu_problems_button"
-              		href="<% url "/problems" %>">Problemas</a></li>
-              <li><a class="button_square navigation_menu_button" id="navigation_menu_ideas_button"
-              		 href="<% url "/ideas" %>">Ideas</a></li>
-              <% if user_signed_in %>
-					<li><div class="horizontal_line" ></div></li>
-					<li>
-						<a class="button_square navigation_menu_button after_div" id="navigation_menu_profile_button"
-							href="<% url "/user" using user_name %>">
-							Perfil
-						</a>
-					</li>
-				<% end %>
-            </ul>
-          </div>
-		<% end template %>
-				
 		
-		<% template css_links() %>
-			<link href="/lib/jquery-ui/ui-lightness/jquery-ui-1.10.0.custom.min.css" rel="stylesheet" type="text/css" />
-    		<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    		<link href="/lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
-    		<link href="/lib/xbbcode/xbbcode.css" rel="stylesheet" type="text/css" />
+		<% template head_content() %>
+			<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+			<link href="/lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
 			<link href="/css/template.css" rel="stylesheet" type="text/css" />
-		<% end template %>
-
-
-		<% template js_links() %>
+			
 			<script src="/lib/jquery/jquery-1.9.0.min.js"></script>
-			<script src="/lib/jquery-ui/jquery-ui-1.10.0.custom.min.js"></script>
-    		<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
-			<script src="/lib/xbbcode/xbbcode.js"></script>
+			<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+			<script src="/js/global.js"></script>
 			<script src="/js/logic.js"></script>
 			<script src="/js/graphic.js"></script>
-			<script src="/js/utilities.js"></script>
-			<script src="/lib/facebook/all.js"></script>
-			<script src="/js/facebook.js"></script>
-			
-			<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-	    	<!--[if lt IE 9]>
-	      		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	    	<![endif]-->
 		<% end template %>
 		
 		
-		<% template javascript_code() %>
-			<script>
-				$(document).ready(function() {
-					configureTextfield('sign_in_textfield_user_name');
-					configurePasswordfield('sign_in_textfield_password');
-					configureSignInFormContainer('header_bar_sign_in_container', 'header_bar_button_sign_in');
-				});
-			</script>
+		<% template body_content() %>
 		<% end template %>
 		
 		
-		<% template page_content() %>
+		<% template js_head_code() %>
 		<% end template %>
-
-
+		
+		
+		<% template js_body_code() %>
+		<% end template %>
+		
+		
 		<% template render() %>
 			<!DOCTYPE html>
 			<html>
 				<head>
-					<% include css_links() %>
-					<% include js_links() %>
-					<% include javascript_code() %>
 			    	<title>
-			    		<%= page_title %>
+			    		<% include page_title() %>
 			    	</title>
+					<% include head_content() %>
+					<script>
+						<% include js_head_code() %>
+					</script>
 				</head>
 				<body>
-					<div id="fb-root"></div>
-					<% include page_content() %>
+					<% include body_content() %>
+					<script>
+						<% include js_body_code() %>
+					</script>
 				</body>
 			</html>
 		<% end template %>
-
-
+		
+		
 	<% end view %>
 <% end skin %>
