--- a/www/css/template.css
+++ b/www/css/template.css
@@ -1,3 +1,32 @@
+
+.main-container {
+	padding: 0px 20px;
+	background-color: #FFFFFF;
+	border-color: #D0D0D0;
+	border-style: solid;
+	border-width: 1px;
+	box-shadow: 2px 0px 8px rgba(51, 51, 51, 0.4), -2px 0px 8px rgba(51, 51, 51, 0.4);
+	border-bottom-style: none;
+	
+	min-height: 100%;
+	margin-top: -1px;
+	margin-left: 132px;
+	margin-right: 20px;
+}
+
+.main-container.wide{
+	margin-left: 20px;
+}
+
+.header-padding {
+	padding-top: 60px;
+}
+
+
+
+
+
+
 /*
 ----------------------------------------------------------------------------------------------
 	Global
@@ -437,28 +466,7 @@ div.problems_votes .number {
 }
 
 /* NEW TOTALLY UNORDERED!! */
-.main-container {
-	padding: 0 20px;
-	background-color: #FFFFFF;
-	border-color: #D0D0D0;
-	border-style: solid;
-	border-width: 1px;
-	box-shadow: 2px 0px 8px rgba(51, 51, 51, 0.4), -2px 0px 8px
-		rgba(51, 51, 51, 0.4);
-	border-bottom-style: none;
-	
-	min-height:100%;
-	margin-top: -1px;
-	margin-left: 132px;
-	margin-right:20px;
-}
-.main-container.wide{
-	margin-left:20px;
-}
 
-.header-padding {
-	padding-top: 60px;
-}
 
 .fixed-title-wrapper {
 	position: fixed;
